--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,6 +14,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
+    - name: List Xcode versions
+      run: ls -n /Applications/ | grep Xcode
+    
     - name: Select Xcode
       run: sudo xcode-select -switch /Applications/Xcode_12.5.1.app
       
