--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,9 +16,12 @@ jobs:
     
     - name: List Xcode versions
       run: ls -n /Applications/ | grep Xcode
+      
+    - name: List
+      run: ls
     
     - name: Select Xcode
-      run: sudo xcode-select -switch /Applications/Xcode_12.5.1.app
+      run: sudo xcode-select -switch /Applications/Xcode_12_beta.app
       
     - name: Build and test
       run: xcodebuild clean build test -project EssentialFeed/EssentialFeed.xcodeproj -scheme "CI" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
