--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,5 +14,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       
-    - name: Build and test
+    - name: Build and test macOS
       run: xcodebuild clean build test -project EssentialFeed.xcodeproj -scheme "CI_macOS" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+
+    - name: Build and test iOS
+      run: xcodebuild clean build test -project EssentialFeed.xcodeproj -scheme "CI_iOS" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
